1) change select2 to refer to the <select> element, not the wrapping label. This fixes issue #13. 2) Reduce the number of html validation issues

--- a/public/display/styles/default.css
+++ b/public/display/styles/default.css
@@ -61,6 +61,13 @@ td {
 	margin: 10px 0px;
 }
 
+.surround table {
+	border: 0;
+	border-spacing: 1px;
+	border-collapse: unset;
+	width: 100%;
+}
+
 .surround.month_1 {
 	background: #30B336;
 }
@@ -72,6 +79,10 @@ td {
 }
 .surround.month_0 {
 	background: #408Af9;
+}
+
+.surround td, .surround th {
+	padding: 8px;
 }
 
 .choice {
